--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -30,11 +30,17 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="ShowLogin">Login</a></li>
                     @if (ViewBag.UserLevel == 9) {
-                        <li><a asp-area="" asp-controller="Team" asp-action="AdminNav">Admin</a></li>
+                        <li><a asp-area="" asp-controller="Admin" asp-action="AdminNav">Admin</a></li>
+                    } 
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    @if (ViewBag.UserId == null) {
+                        <li><a asp-area="" asp-controller="Home" asp-action="ShowLogin">Login</a></li>
                     }
-                    
+                    else {
+                        <li><a asp-area="" asp-controller="Home" asp-action="Logout">Logout</a></li>
+                    }
                 </ul>
             </div>
         </div>
