--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -11,47 +11,27 @@
     </ol>
     <div class="carousel-inner" role="listbox">
         <div class="item active">
-            <img src="~/images/banner1.svg" alt="ASP.NET" class="img-responsive" />
+            <img src="~/images/creativity.jpg" alt="Creativity" class="img-responsive" />
             <div class="carousel-caption" role="option">
-                <p>
-                    Learn how to build ASP.NET apps that can run anywhere.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525028&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
+                <p></p>
             </div>
         </div>
         <div class="item">
-            <img src="~/images/banner2.svg" alt="Visual Studio" class="img-responsive" />
+            <img src="~/images/completion.jpg" alt="Completion" class="img-responsive" />
             <div class="carousel-caption" role="option">
-                <p>
-                    There are powerful new features in Visual Studio for building modern web apps.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525030&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
+                <p></p>
             </div>
         </div>
         <div class="item">
-            <img src="~/images/banner3.svg" alt="Package Management" class="img-responsive" />
+            <img src="~/images/complexity.jpg" alt="Complexity" class="img-responsive" />
             <div class="carousel-caption" role="option">
-                <p>
-                    Bring in libraries from NuGet, Bower, and npm, and automate tasks using Grunt or Gulp.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525029&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
+                <p></p>
             </div>
         </div>
         <div class="item">
-            <img src="~/images/banner4.svg" alt="Microsoft Azure" class="img-responsive" />
+            <img src="~/images/collaboration.jpg" alt="Collaboration" class="img-responsive" />
             <div class="carousel-caption" role="option">
-                <p>
-                    Learn how Microsoft's Azure cloud platform allows you to build, deploy, and scale web apps.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525027&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
+                <p></p>
             </div>
         </div>
     </div>
@@ -63,39 +43,4 @@
         <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
     </a>
-</div>
-
-<div class="row">
-    <div class="col-md-3">
-        <h2>Creativity</h2>
-        <ul>
-            <li>uniqueness of idea</li>
-            <li>cool factor</li>
-            <li>implementation</li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>Complexity</h2>
-        <ul>
-            <li>logic</li>
-            <li>external resources</li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>Completion</h2>
-        <ul>
-            <li>MVP</li>
-            <li>functionality</li>
-            <li>design</li>
-            <li>CSS</li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>Collaboration</h2>
-        <ul>
-            <li>division of labor</li>
-            <li>git/GitHub</li>
-            <li>presentation</li>
-        </ul>
-    </div>
 </div>
