--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -30,6 +30,9 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
+                     @if (ViewBag.UserId != null) {
+                        <li><a asp-area="" asp-controller="Team" asp-action="Index">Home</a></li>
+                    }
                     @if (ViewBag.UserLevel == 9) {
                         <li><a asp-area="" asp-controller="Admin" asp-action="AdminNav">Admin</a></li>
                     } 
@@ -39,6 +42,7 @@
                         <li><a asp-area="" asp-controller="Home" asp-action="ShowLogin">Login</a></li>
                     }
                     else {
+                        <span class="navbar-brand">Welcome, @ViewBag.Username</span>
                         <li><a asp-area="" asp-controller="Home" asp-action="Logout">Logout</a></li>
                     }
                 </ul>
