--- a/Views/Team/Index.cshtml
+++ b/Views/Team/Index.cshtml
@@ -5,17 +5,21 @@
 
 <h3>Join a Competition:</h3>
 <form asp-controller="Team" asp-action="MakeTeam" method="POST">
-    <div class="form-group">
+    <div class="row topbuffer">
+        <div class="col-md-3">
         <select name="competition" class="form-control">
             @foreach (var c in ViewBag.currentCompetitions) {
                 <option value="@c.CompetitionId">@c</option>
             }
         </select>
-        <input type="submit" value="Join" class="btn btn-warning">
+        </div>
+        <div class="col-sm-1">
+            <input type="submit" value="Join" class="btn btn-warning">
+        </div>
     </div>
 </form>
 
-<h3>My Current Teams:</h3>
+<h3>My Current Competitions:</h3>
 @foreach (var t in ViewBag.currentTeams) {
     <p><a href="">@t</a></p>
 }
