--- a/Views/Team/Index.cshtml
+++ b/Views/Team/Index.cshtml
@@ -21,5 +21,5 @@
 
 <h3>My Current Competitions:</h3>
 @foreach (var t in ViewBag.currentTeams) {
-    <p><a href="">@t</a></p>
+    <p><a asp-controller="Team" asp-action="ViewCompetition" asp-route-compId="@t.CompetitionId">@t</a></p>
 }
