--- a/Views/Admin/Competition.cshtml
+++ b/Views/Admin/Competition.cshtml
@@ -10,7 +10,7 @@
             <p class="rederror">@e</p>
         }
         
-        <form asp-controller="Team" asp-action="AddCompetition" method="POST">
+        <form asp-controller="Admin" asp-action="AddCompetition" method="POST">
             <div class="form-group">
                 <label for="name">Competition Name</label>
                 <input type="text" name="name" class="form-control">
