--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -57,3 +57,15 @@ textarea {
     display: inline-block;
     font-size: 1.3em;
 }
+
+.orangemessage {
+    color: orange;
+    font-weight: bold;
+}
+
+.show-time {
+    display: inline-block;
+    width: 80px;
+    text-align: right;
+    padding-right: 10px;
+}
