--- a/Views/Team/ShowCompetition.cshtml
+++ b/Views/Team/ShowCompetition.cshtml
@@ -8,16 +8,37 @@
 <h4><span class="show-time">START:</span>@Model.Start.ToString("f")</h4>
 <h4><span class="show-time">END:</span>@Model.End.ToString("f")</h4>
 <hr>
-<p class="orangemessage">@ViewBag.message</p>
-<h4>Teams</h4>
-<ul>
-@foreach (var t in Model.Teams){
-    <li>@t.TeamName - @t.ProjectTitle
-        <ul>
-        @foreach (var s in t.Students) {
-            <li>  @s.UserInfo.FirstName  </li>
+<h4 class="orangemessage">@ViewBag.message</h4>
+
+@if (ViewBag.message == "FINAL RESULTS") {
+    <div class="col-sm-7">
+        <table class="table table-hover">
+            <tr>
+                <th>Votes</th>
+                <th>Team</th>
+                <th>Project</th>
+            </tr>
+        @foreach (var t in Model.Teams){
+            <tr>
+                <td>@t.VotesScored</td>
+                <td>@t.TeamName</td>
+                <td>@t.ProjectTitle</td>
+            </tr>
         }
-        </ul>
-    </li>
+        </table>
+    </div>
+    <div class="row"></div>
 }
-</ul>
+else {
+    <ul>
+    @foreach (var t in Model.Teams){
+        <li>@t.TeamName - @t.ProjectTitle
+            <ul>
+            @foreach (var s in t.Students) {
+                <li>  @s.UserInfo.FirstName  </li>
+            }
+            </ul>
+        </li>
+    }
+    </ul>
+}
