--- a/Views/Team/ShowCompetition.cshtml
+++ b/Views/Team/ShowCompetition.cshtml
@@ -8,11 +8,13 @@
 <h4><span class="show-time">START:</span>@Model.Start.ToString("f")</h4>
 <h4><span class="show-time">END:</span>@Model.End.ToString("f")</h4>
 <hr>
-<h4 class="orangemessage">@ViewBag.message</h4>
 
 @if (ViewBag.message == "FINAL RESULTS") {
     <div class="col-sm-7">
         <table class="table table-hover">
+            <tr>
+                <th colspan="3" class="orangemessage">@ViewBag.message</th>
+            </tr>
             <tr>
                 <th>Votes</th>
                 <th>Team</th>
@@ -30,6 +32,7 @@
     <div class="row"></div>
 }
 else {
+<h4 class="orangemessage">@ViewBag.message</h4>
     <ul>
     @foreach (var t in Model.Teams){
         <li>@t.TeamName - @t.ProjectTitle
