added admin functionality

--- a/Views/Admin/Admin.cshtml
+++ b/Views/Admin/Admin.cshtml
@@ -12,6 +12,6 @@
 
 }
 </ul>
-
 <h3>Students</h3>
 <p><a asp-controller="Admin" asp-action="AddStudents">Add Students</a></p>
+<p><a asp-controller="Admin" asp-action="EditStudents">Edit Students</a></p>
