--- a/Views/Team/ShowCompetition.cshtml
+++ b/Views/Team/ShowCompetition.cshtml
@@ -38,7 +38,7 @@ else {
         <li>@t.TeamName - @t.ProjectTitle
             <ul>
             @foreach (var s in t.Students) {
-                <li>  @s.UserInfo.FirstName  </li>
+                <li>  @s.FirstName  </li>
             }
             </ul>
         </li>
